# pagan

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  binpargen4.sln  pagan.sln  vcpkg-configuration.json  vcpkg.json
binpargen4/: DynObject.cpp  DynObject.h  Parser.cpp  Parser.h  StreamRegistry.cpp  StreamRegistry.h  TypeSpec.cpp  TypeSpec.h  binpargen4.vcxproj  expr.cpp  iowrap.cpp  mainesp.cpp  membuf.h  objectindex.cpp  objectindex.h  parserFromKSY.cpp  typecast.cpp  util.cpp
cmake/: Config.cmake.in
doc/: index_format.md
node-pagan/: CMakeLists.txt  index.js  package.json  pindex.bt
node-pagan/src/: ParserWrap.cpp  ParserWrap.h  main.cpp
pagan/: CMakeLists.txt  DynObject.cpp  DynObject.h  IScriptQuery.h  ObjectIndexTable.cpp  ObjectIndexTable.h  Parser.cpp  Parser.h  StreamRegistry.cpp  StreamRegistry.h  TypeProperty.h  TypePropertyBuilder.cpp  TypePropertyBuilder.h  TypeRegistry.cpp  TypeRegistry.h  TypeSpec.cpp  TypeSpec.h  constants.h  expr.cpp  expr.h  flexi_cast.cpp  flexi_cast.h  iowrap.cpp  iowrap.h  main.cc  main.cpp.backup  mainesp.cc  mainesp.cpp  mainrar.cc  mainzip.cc  membuf.h  objectindex.cpp  objectindex.h  pagan.vcxproj  parserFromKSY.cpp  parserFromKSY.h  typecast.cpp  typecast.h  types.h  util.cpp  (+1 more)
tests/: CMakeLists.txt  dynobject.cpp  expr.cpp  flexi_cast.cpp  iowrap.cpp  typeregistry.cpp  typespec.cpp
vcpkg_overlay/pagan-expr/: portfile.cmake  vcpkg.json
